--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyboneco"
-version = "0.3.5"
+version = "0.3.6"
 description = "Basic library for working with Boneco devices"
 readme = "README.md"
 authors = [
@@ -18,7 +18,7 @@ requires-python = ">=3.13"
 dependencies = [
     "bleak==0.22.3",
     "bleak-retry-connector==3.8.1",
-    "cryptography==44.0.1",
+    "cryptography==44.0.0",
 ]
 
 [project.urls]
@@ -27,3 +27,8 @@ Repository = "https://github.com/DeKaN/pyboneco.git"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ruff==0.9.7",
+]
